# amp-assistant

./: .env.example  .gitignore  Dockerfile  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  config.example.yaml  docker-compose.yml  install.sh  pyproject.toml  start_bot.sh  start_telegram_bot.sh
.github/workflows/: publish.yml  test.yml
.omc/sessions/: f182ed73-96ab-4f2f-913e-696104275f61.json
.omc/state/: idle-notif-cooldown.json
amp/: __init__.py  config.py  mcp_server.py
amp/cli/: plugin_cmd.py
amp/core/: __init__.py  agent_registration.py  auto_persona.py  cser_gate.py  domain_registry.py  emergent.py  kg.py  kg_bridge.py  llm_factory.py  metrics.py  pipeline_engine.py  router.py  solo.py  tool_runtime.py  user_config.py
amp/interfaces/: __init__.py  cli.py  telegram_bot.py
amp/plugins/: __init__.py  base.py  claude_executor.py  image_gen.py  image_vision.py  mcp_bridge.py  registry.py  skill_loader.py
docs/: ARCHITECTURE.md  UNIFICATION_PLAN_2026-03-02.md  plugin-guide.md
docs/assets/: index.html  prompts.json
experiments/: amp_verdict_v2.json  amp_verdict_v2.py  results.json  run_experiments.py
scripts/: release.sh  safe_edit.py  setup-launchd.sh
tests/: test_same_vendor_diversity.py
