[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amp-reasoning"
version = "0.1.0"
description = "Two AIs argue. You get a better answer. Multi-agent emergent reasoning engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "multi-agent", "reasoning", "debate", "emergent", "ai", "gpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# pip install "amp-reasoning[server]" — MCP 서버 포함
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
# pip install "amp-reasoning[telegram]" — Telegram 봇 포함
telegram = [
    "python-telegram-bot>=21.0",
]
# pip install "amp-reasoning[all]" — 전부
all = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot>=21.0",
    "google-generativeai>=0.8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
amp = "amp.interfaces.cli:cli"

[project.urls]
Homepage = "https://github.com/amp-assistant/amp"
Repository = "https://github.com/amp-assistant/amp"
Issues = "https://github.com/amp-assistant/amp/issues"

[tool.hatch.build.targets.wheel]
packages = ["amp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
