[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amp-reasoning"
version = "0.1.0"
description = "Two AIs argue. You get a better answer. Multi-agent emergent reasoning engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "multi-agent", "reasoning", "debate", "emergent", "ai", "gpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# pip install "amp-reasoning[server]" — MCP 서버 포함
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
# pip install "amp-reasoning[telegram]" — Telegram 봇 포함
telegram = [
    "python-telegram-bot>=21.0",
]
# pip install "amp-reasoning[gemini]" — Google Gemini 지원
# GEMINI_API_KEY 또는 GOOGLE_API_KEY 필요 (Google AI Studio 무료 티어 있음)
gemini = [
    "google-genai>=1.0.0",   # 새 통합 SDK (deprecated google-generativeai 대체)
]
# pip install "amp-reasoning[zhipu]" — ZhiPu GLM 지원 (중국 AI)
# ZHIPUAI_API_KEY 필요 (https://open.bigmodel.cn)
zhipu = [
    "zhipuai>=2.1.0",
]
# DeepSeek, xAI Grok, Mistral — openai SDK(기본 포함)로 OpenAI-호환 사용
# 별도 설치 불필요: DEEPSEEK_API_KEY / XAI_API_KEY / MISTRAL_API_KEY만 설정
# pip install "amp-reasoning[all]" — 전부
all = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot>=21.0",
    "google-genai>=1.0.0",
    "zhipuai>=2.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
amp = "amp.interfaces.cli:cli"

[project.urls]
Homepage = "https://github.com/amp-assistant/amp"
Repository = "https://github.com/amp-assistant/amp"
Issues = "https://github.com/amp-assistant/amp/issues"

[tool.hatch.build.targets.wheel]
packages = ["amp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
